# zk-gRPC

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
proto/: zk_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
