[package]
name = "ChaumPedersen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = {version="0.4", features =["rand"]}
protobuf = "3.5.1"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic= "0.12.3"
prost = "0.13.3"

#we need that before the compilation (tonic)
[build-dependencies]
tonic-build="0.12.3"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
